--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ repositories {
 }
 
 dependencies {
-    compile 'com.amazon.alexa:ask-sdk:2.11.2'
+    compile "com.amazon.alexa:ask-sdk:$alexasdkVersion"
 
     compile 'log4j:log4j:1.2.17'
     compile 'org.slf4j:slf4j-api:1.7.10'
