Add Micronaut HTTP Client

--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ repositories {
 
 dependencies {
     compile "com.amazon.alexa:ask-sdk:$alexasdkVersion"
+    compile "io.micronaut:micronaut-http-client:$micronautVersion"
 
     compile 'log4j:log4j:1.2.17'
     compile 'org.slf4j:slf4j-api:1.7.10'
