--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ import jp.classmethod.aws.gradle.lambda.AWSLambdaMigrateFunctionTask
 plugins {
     id "com.github.johnrengelman.shadow" version "4.0.4"
     id "jp.classmethod.aws.lambda" version "0.38"
-    id "java"
+    id "groovy"
 }
 
 group = 'chuck-norris-facts'
@@ -21,7 +21,8 @@ repositories {
 
 dependencies {
     compile "com.amazon.alexa:ask-sdk:$alexasdkVersion"
-    compile "io.micronaut:micronaut-http-client:$micronautVersion"
+    compile "org.codehaus.groovy:groovy:$groovyVersion"
+    compile "org.codehaus.groovy:groovy-json:$groovyVersion"
 
     compile 'log4j:log4j:1.2.17'
     compile 'org.slf4j:slf4j-api:1.7.10'
@@ -53,4 +54,3 @@ if (new File("${System.getProperty("user.home")}/.aws/credentials").exists()) {
 }
 
 build.dependsOn shadowJar
-
